# DDevUI

./: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: app.vue
app/components/custom/: ProjectListCard.vue  SystemInfoCard.vue
app/components/layout/: Header.vue  Sidenavbar.vue
app/layouts/: default.vue
app/pages/: add-project.vue  index.vue
app/stores/: sidebar.js  systemInfoStore.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: cmd.rs  lib.rs  main.rs
