[package]
name = "DDevUI"
version = "1.1.1"
description = "UI for DDev"
authors = ["rootShiv"]
license = "MIT"
repository = "https://github.com/shiv122/DDevUI"
edition = "2021"

[lib]
name = "ddev_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies.tauri-build]
version = "2.0.3"
features = []

[dependencies]
tauri-plugin-shell = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-store = "2.2.0"
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[dependencies.tauri]
version = "2.1.1"
features = ["tray-icon"]

[dependencies.serde]
version = "1"
features = ["derive"]
